[gd_scene load_steps=3 format=2]

[ext_resource path="res://Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]

[node name="JeuCarte" parent="." instance=ExtResource( 1 )]
position = Vector2( 500, 300 )

[node name="PiocheCarte" parent="." instance=ExtResource( 1 )]
position = Vector2( 1000, 300 )
rotation = -1.5708

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
